[package]
name = "system-info"
version = "0.1.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
keywords = ["os", "system", "network", "ip", "getifaddrs"]
description = "Library to get system information"
categories = ["os", "api-bindings"]
repository = "https://github.com/DoumanAsh/system-info"
license = "BSL-1.0"

[dependencies.libc]
version = "0.2"
default-features = false

[target.'cfg(target_os = "windows")'.dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug"
]

[features]
# Enables std
std = []

[package.metadata.docs.rs]
features = ["std"]
